--- a/posts/staging/multiomics_simulation.Rmd
+++ b/posts/staging/multiomics_simulation.Rmd
@@ -57,7 +57,8 @@ edge_counts <- igraph::degree(net_connections) %>%
 ggplot(edge_counts, aes(x = degree, y = count)) +
   geom_point() +
   scale_x_log10() +
-  scale_y_log10()
+  scale_y_log10() +
+  ggtitle("Yay powerlaws")
 ```
 
 ## Assign simulated nodes to molecules
@@ -114,7 +115,12 @@ edges_df <- igraph::as_data_frame(net_connections) %>%
   
 species_df = species_init %>%
   dplyr::select(species_id, species_type) %>%
-  dplyr::arrange(species_id)
+  dplyr::arrange(species_id) %>%
+  # add some global properties which can be configured to be feature-specific
+  dplyr::mutate(
+    basal_prod = 0.2,
+    loss_rate = 1
+  )
 
 pruned_network <- igraph::graph_from_data_frame(edges_df,
                                                 directed = TRUE,
@@ -158,7 +164,7 @@ $$
 This is no good, values blow up to Inf
 
 $$
-\frac{dS_{k}}{dt} = \prod_{i \in \text{inhibitors}} \frac{k_i}{k_{i} + S_i}\prod_{a \in \text{activators}} \left( 1 + \frac{S_{a}}{k_{a}}\right) - \lambda S_{i}
+\frac{dS_{k}}{dt} = \prod_{i \in \text{inhibitors}} \frac{k_i}{k_{i} + S_i}\prod_{a \in \text{activators}} \left( 1 + \frac{S_{a}}{k_{a}}\right) - \lambda S_{k}
 $$
 
 
@@ -185,7 +191,10 @@ ggplot(pars, aes(x = effect, fill = interaction_type)) +
   geom_histogram(binwidth = 0.1) 
   
 
-Deffects <- function(time, states, pars, species_df, basal_prod = 0.2, loss_rate = 1) {
+Deffects <- function(time, states, pars, species_df, time_resolution = 0.1) {
+  
+  # takes the args of ode() and returns derivatives
+  # aligned with "states"
   
   reg_states <- tibble::tibble(value = states) %>%
     dplyr::mutate(species_id = 1:n()) %>%
@@ -200,20 +209,13 @@ Deffects <- function(time, states, pars, species_df, basal_prod = 0.2, loss_rate
     dplyr::group_by(to) %>%
     dplyr::summarize(rate = prod(rel_rate))
   
-  # reg_states <- reg_states %>%
-  #   dplyr::left_join(modulated, by = c("species_id" = "to")) %>%
-  #   dplyr::mutate(net_effect = ifelse(is.na(net_effect), 0, net_effect),
-  #                 # basal production
-  #                 basal_synthesis = ifelse(species_type == "protein", 0, basal_prod),
-  #                 loss = -1 * value * loss_rate,
-  #                 deriv = net_effect + basal_synthesis + loss)
-  
   reg_states <- reg_states %>%
     dplyr::left_join(modulated, by = c("species_id" = "to")) %>%
     dplyr::mutate(rate = ifelse(is.na(rate), 1, rate),
-                  # basal production
                   loss = -1 * value * loss_rate,
-                  deriv = basal_prod + rate + loss)
+                  # basal production + variable production + washout
+                  # scale to time resolution / step size
+                  deriv = (basal_prod + rate + loss)*time_resolution)
   
   state_derivs <- list(reg_states$deriv)
   
@@ -223,21 +225,24 @@ Deffects <- function(time, states, pars, species_df, basal_prod = 0.2, loss_rate
 ```
 
 ```{r}
-
 # since production and degradation rates are not balanced initially
 # we can simulate from initial conditions to find pre-perturbation initial steady state
-max_time <- 100
+MAX_TIME <- 1000
+TIME_RESOLUTION <- 0.5
 
-ode_sim <- ode(y = states,
-    times = seq(0, max_time, by = 0.1),
-    func = Deffects,
-    parms = pars,
-    species_df = species_df)
+ode_sim <- ode(
+  y = states,
+  times = seq(0, MAX_TIME, by = TIME_RESOLUTION),
+  func = Deffects,
+  parms = pars,
+  species_df = species_df
+  )
 
 simulated_dynamics <- ode_sim %>%
   as.data.frame() %>%
   tidyr::gather(species_id, value, -time) %>%
-  tibble::as_tibble()
+  tibble::as_tibble() %>%
+  dplyr::mutate(species_id = as.integer(species_id))
 
 simulated_dynamics %>%
   dplyr::semi_join(
@@ -260,6 +265,7 @@ time_derivatives <- simulated_dynamics %>%
     function(x) {
       tibble::tibble(
         assym_value = mean(x$value),
+        # check differences between adjacent time steps
         mean_D = mean(diff(x$value))
       )
       }
@@ -267,12 +273,10 @@ time_derivatives <- simulated_dynamics %>%
   dplyr::select(-vals) %>%
   tidyr::unnest(assym_summary)
 
-stopifnot(all(!is.na(time_derivatives$mean_D)))
-
-time_derivatives %>%
-  ggplot(aes(x = mean_D)) +
-  geom_histogram() +
-  ggtitle("Time derivates have shrunk to zero -> a steady state has been reached")
+stopifnot(
+  all(!is.na(time_derivatives$mean_D)),
+  all(abs(time_derivatives$mean_D) < 1e-5)
+  )
 ```
 
 ### Now we can take the steady-state and add a genetic perturbation
@@ -280,18 +284,56 @@ time_derivatives %>%
 ```{r}
 # now lets separately perturb each species
 
-dynamics_df <- time_derivatives %>%
-  dplyr::distinct(perturbation = species_id) %>%
-  tidyr::crossing(time_derivatives) %>%
-  # 20 X upregulation of a single feature
-  dplyr::mutate(timecourse_init = ifelse(perturbation == species_id, assym_value * 20, assym_value)) %>%
-  tidyr::nest(perturbation_dat = -perturbation)
-
-ode_sim <- ode(y = species_df$timecourse_init,
-    times = seq(0, 5, by = 0.1),
+simulate_perturbation <- function (perturbed_species_id, time_derivatives, species_df) {
+  
+  checkmate::assertInteger(perturbed_species_id)
+  checkmate::assertChoice(perturbed_species_id, species_df$species_id)
+  
+  perturbed_species_df <- species_df %>%
+    dplyr::mutate(basal_prod = ifelse(species_id == perturbed_species_id, basal_prod*20, basal_prod))
+    
+  perturbation_sim <- ode(
+    y = time_derivatives$assym_value,
+    times = seq(0, 100, by = 0.5),
     func = Deffects,
     parms = pars,
-    species_df = species_df)
+    species_df = perturbed_species_df
+  ) %>%
+    as.data.frame() %>%
+    tidyr::gather(species_id, value, -time) %>%
+    tibble::as_tibble() %>%
+    dplyr::mutate(species_id = as.integer(species_id)) %>%
+    dplyr::group_by(species_id) %>%
+    # calculate fold-change relative to the t0 s.s.
+    dplyr::mutate(fold_change = value / value[time == 0]) %>%
+    dplyr::ungroup()
+}
+
+ggplot(perturbation_sim, aes(x = time, y = log2(fold_change), group = species_id)) +
+  geom_path()
+
+all_perturbation_timecourses <- time_derivatives %>%
+  dplyr::distinct(perturbed_species_id = species_id) %>%
+  dplyr::mutate(perturbation_results = purrr::map(
+    perturbed_species_id,
+    simulate_perturbation, 
+    time_derivatives,
+    species_df
+    ) 
+  )
+
+all_perturbation_timecourses %>%
+  tidyr::unnest(perturbation_results) %>%
+  dplyr::semi_join(
+    pars,
+    by = c("perturbed_species_id" = "from", "species_id" = "to")
+    ) %>%
+  dplyr::mutate(tc_id = glue::glue("{perturbed_species_id}_{species_id}")) %>%
+  ggplot(aes(x = time, y = fold_change, group = tc_id)) +
+  geom_path() +
+  ggtitle("Direct activation / inhibition")
+  
+
 
 
 
